--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,9 +1,24 @@
 @import url('https://fonts.googleapis.com/css2?family=Noto+Serif+TC:wght@400;500;700;900&family=Roboto:ital,wght@0,400;0,500;0,700;1,400&display=swap');
+/*  Noto serif = {4, 5, 7, 9}
+    Roboto = {4^2, 5, 7} */
+$desktop: 1025px ;
+$tablet : 1024px ;
+$mobile : 767px ;
+@mixin fontSet($fz, $wt) {
+    font-size: $fz;
+    font-weight: $wt;
+}
 * {
     padding: 0;
     margin: 0;
     font-family: 'Noto Serif TC', 'Roboto', serif;
     box-sizing: border-box;
+}
+a {
+    text-decoration: none;
+    &:link, &:visited {
+        color: white ;
+    }
 }
 body {
     width: 100%;
@@ -11,4 +26,26 @@ body {
     background-image: url(/img/frontBG.jpg);
     background-repeat: no-repeat;
     background-size: cover;
+}
+nav {
+    width: 100%;
+    position: sticky;
+    background-color: rgba( white, 0.3);
+    #nav-logo {
+        height: 64px;
+        float: left;
+        display: flex;
+        align-items: center;
+        @include fontSet(2em, )
+    }
+    #nav-hbg {
+        @media screen and (min-width : $desktop) {
+            display: none;
+        }
+        display: block;
+    }
+    #nav-link-wrap {
+        display: flex;
+        float: right;
+    }
 }
