--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,10 @@
 @import url("https://fonts.googleapis.com/css2?family=Noto+Serif+TC:wght@400;500;700;900&family=Roboto:ital,wght@0,400;0,500;0,700;1,400&display=swap");
+/*  Noto serif = {4, 5, 7, 9}
+    Roboto = {4^2, 5, 7} */
 * {
   padding: 0;
   margin: 0;
-  font-family: 'Noto Serif TC', 'Roboto', serif;
+  font-family: "Noto Serif TC", "Roboto", serif;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
 }
@@ -24,6 +26,7 @@ body {
 }
 
 nav {
+  margin: 15px 0;
   width: 100%;
   position: -webkit-sticky;
   position: sticky;
@@ -32,6 +35,7 @@ nav {
 
 nav #nav-logo {
   height: 64px;
+  margin: -10px 0 0 10px;
   float: left;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -39,6 +43,8 @@ nav #nav-logo {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  font-size: 2em;
+  font-weight: 700;
 }
 
 nav #nav-hbg {
@@ -56,5 +62,23 @@ nav #nav-link-wrap {
   display: -ms-flexbox;
   display: flex;
   float: right;
+}
+
+nav #nav-link-wrap a {
+  display: block;
+  padding: 5px 40px;
+  margin-right: 2em;
+  background-color: transparent;
+  border: 2px solid #fff;
+  border-radius: 20px;
+  text-align: center;
+  font-size: 1em;
+  font-weight: 700;
+}
+
+nav #nav-link-wrap a:hover {
+  background-color: rgba(255, 255, 255, 0.9);
+  border-color: rgba(255, 255, 255, 0.9);
+  color: #006360;
 }
 /*# sourceMappingURL=style.css.map */
