--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,9 +1,9 @@
-@import url('https://fonts.googleapis.com/css2?family=Noto+Serif+TC:wght@400;500;700;900&family=Roboto:ital,wght@0,400;0,500;0,700;1,400&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Noto+Serif+TC:wght@400;500;700;900&family=Roboto:ital,wght@0,400;0,500;0,700;1,400&display=swap");
 /*  Noto serif = {4, 5, 7, 9}
     Roboto = {4^2, 5, 7} */
-$desktop: 1025px ;
-$tablet : 1024px ;
-$mobile : 767px ;
+$desktop: 1025px;
+$tablet: 1024px;
+$mobile: 767px;
 @mixin fontSet($fz, $wt) {
     font-size: $fz;
     font-weight: $wt;
@@ -11,13 +11,14 @@ $mobile : 767px ;
 * {
     padding: 0;
     margin: 0;
-    font-family: 'Noto Serif TC', 'Roboto', serif;
+    font-family: "Noto Serif TC", "Roboto", serif;
     box-sizing: border-box;
 }
 a {
     text-decoration: none;
-    &:link, &:visited {
-        color: white ;
+    &:link,
+    &:visited {
+        color: white;
     }
 }
 body {
@@ -28,18 +29,20 @@ body {
     background-size: cover;
 }
 nav {
+    margin: 15px 0;
     width: 100%;
     position: sticky;
-    background-color: rgba( white, 0.3);
+    background-color: rgba(white, 0.3);
     #nav-logo {
         height: 64px;
+        margin: -10px 0 0 10px;
         float: left;
         display: flex;
         align-items: center;
-        @include fontSet(2em, )
+        @include fontSet(2em, 700);
     }
     #nav-hbg {
-        @media screen and (min-width : $desktop) {
+        @media screen and (min-width: $desktop) {
             display: none;
         }
         display: block;
@@ -47,5 +50,21 @@ nav {
     #nav-link-wrap {
         display: flex;
         float: right;
+        a {
+            display: block;
+            padding: 5px 40px;
+            margin-right: 2em;
+            background-color: transparent;
+            border: 2px solid #fff;
+            border-radius: 20px;
+            text-align: center;
+            @include fontSet(1em, 700);
+            &:hover {
+                $color-seagreen: rgba(#fff, 0.9);
+                background-color: $color-seagreen;
+                border-color: $color-seagreen;
+                color: #006360;
+            }
+        }
     }
 }
