--- a/css/style.css
+++ b/css/style.css
@@ -45,6 +45,12 @@ nav #nav-logo {
           align-items: center;
   font-size: 2em;
   font-weight: 700;
+  -webkit-transition: text-shadow 0.5s;
+  transition: text-shadow 0.5s;
+}
+
+nav #nav-logo:hover {
+  text-shadow: 0 0 50px rgba(245, 245, 245, 0.6);
 }
 
 nav #nav-hbg {
@@ -70,10 +76,12 @@ nav #nav-link-wrap a {
   margin-right: 2em;
   background-color: transparent;
   border: 2px solid #fff;
-  border-radius: 20px;
+  border-radius: 30px;
   text-align: center;
   font-size: 1em;
   font-weight: 700;
+  -webkit-transition: 0.5s;
+  transition: 0.5s;
 }
 
 nav #nav-link-wrap a:hover {
