--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,10 +1,10 @@
 @import url("https://fonts.googleapis.com/css2?family=Noto+Serif+TC:wght@400;500;700;900&family=Roboto:ital,wght@0,400;0,500;0,700;1,400&display=swap");
-/*  Noto serif = {4, 5, 7, 9}
-    Roboto = {4^2, 5, 7} */
+
 $desktop: 1025px;
 $tablet: 1024px;
 $mobile: 767px;
 @mixin fontSet($fz, $wt) {
+    /*  Noto serif = {4, 5, 7, 9}, Roboto = {4^2, 5, 7} */
     font-size: $fz;
     font-weight: $wt;
 }
@@ -21,9 +21,15 @@ a {
         color: white;
     }
 }
+.clearfix::after {
+    content: "";
+    clear: both;
+    display: table;//magic trick
+}
 body {
     width: 100%;
-    min-height: 100%;
+    min-height: 100vh;
+    position: relative;
     background-image: url(/img/frontBG.jpg);
     background-repeat: no-repeat;
     background-size: cover;
@@ -32,7 +38,7 @@ nav {
     margin: 15px 0;
     width: 100%;
     position: sticky;
-    background-color: rgba(white, 0.3);
+    // background-color: rgba(white, 0.3);
     #nav-logo {
         height: 64px;
         margin: -10px 0 0 10px;
@@ -71,5 +77,15 @@ nav {
                 color: #006360;
             }
         }
+    }
+}
+#slogan {
+    position: absolute;
+    top: 42%;
+    right: 4%;
+    h1 {
+        @include fontSet(2.5em, 900) ;
+        color:whitesmoke;
+        text-shadow: 0 0 20px rgba(whitesmoke,0.95);
     }
 }
