--- a/css/style.css
+++ b/css/style.css
@@ -21,9 +21,13 @@ a:link, a:visited {
   display: table;
 }
 
-body {
+html, body {
   width: 100%;
-  min-height: 100vh;
+  height: 100%;
+}
+
+body {
+  overflow: hidden;
   position: relative;
   background-image: url(/img/frontBG.jpg);
   background-repeat: no-repeat;
@@ -98,15 +102,26 @@ nav #nav-link-wrap a:hover {
 
 #slogan {
   position: absolute;
-  top: 42%;
-  right: 4%;
+  top: 38%;
+  right: 6%;
 }
 
 #slogan h1 {
   /*  Noto serif = {4, 5, 7, 9}, Roboto = {4^2, 5, 7} */
-  font-size: 2.5em;
+  font-size: 3em;
   font-weight: 900;
   color: whitesmoke;
   text-shadow: 0 0 20px rgba(245, 245, 245, 0.95);
+}
+
+#bubbles {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
 }
 /*# sourceMappingURL=style.css.map */
