--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Noto+Serif+TC:wght@400;500;700;900&family=Roboto:ital,wght@0,400;0,500;0,700;1,400&display=swap");
+@use "sass:math";
 * {
   padding: 0;
   margin: 0;
@@ -21,7 +22,8 @@ a:link, a:visited {
   display: table;
 }
 
-html, body {
+html,
+body {
   width: 100%;
   height: 100%;
 }
@@ -123,5 +125,87 @@ nav #nav-link-wrap a:hover {
   display: flex;
   -ms-flex-pack: distribute;
       justify-content: space-around;
+}
+
+#bubbles img {
+  -webkit-animation: bubble 7s ease-in infinite backwards;
+          animation: bubble 7s ease-in infinite backwards;
+  -o-object-fit: contain;
+     object-fit: contain;
+}
+
+#bubbles img:nth-child(1) {
+  -webkit-animation-delay: 5s;
+          animation-delay: 5s;
+}
+
+#bubbles img:nth-child(2) {
+  -webkit-animation-delay: 15s;
+          animation-delay: 15s;
+}
+
+#bubbles img:nth-child(3) {
+  -webkit-animation-delay: 10s;
+          animation-delay: 10s;
+}
+
+#bubbles img:nth-child(4) {
+  -webkit-animation-delay: 12.5s;
+          animation-delay: 12.5s;
+}
+
+#bubbles img:nth-child(5) {
+  -webkit-animation-delay: 2.5s;
+          animation-delay: 2.5s;
+}
+
+#bubbles img:nth-child(6) {
+  -webkit-animation-delay: 7.5s;
+          animation-delay: 7.5s;
+}
+
+#bubbles img:nth-child(7) {
+  -webkit-animation-delay: 5s;
+          animation-delay: 5s;
+}
+
+#bubbles img:nth-child(3n+2) {
+  width: 70px;
+}
+
+#bubbles img:nth-child(5n+1) {
+  width: 30px;
+}
+
+@-webkit-keyframes bubble {
+  0% {
+    opacity: 0;
+    -webkit-transform: translateY(0);
+            transform: translateY(0);
+  }
+  5% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+    -webkit-transform: translateY(-80vh);
+            transform: translateY(-80vh);
+  }
+}
+
+@keyframes bubble {
+  0% {
+    opacity: 0;
+    -webkit-transform: translateY(0);
+            transform: translateY(0);
+  }
+  5% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+    -webkit-transform: translateY(-80vh);
+            transform: translateY(-80vh);
+  }
 }
 /*# sourceMappingURL=style.css.map */
