--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,5 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Noto+Serif+TC:wght@400;500;700;900&family=Roboto:ital,wght@0,400;0,500;0,700;1,400&display=swap");
-
+@use "sass:math";
 $desktop: 1025px;
 $tablet: 1024px;
 $mobile: 767px;
@@ -24,9 +24,10 @@ a {
 .clearfix::after {
     content: "";
     clear: both;
-    display: table;//magic trick
+    display: table; //magic trick
 }
-html, body {
+html,
+body {
     width: 100%;
     height: 100%;
 }
@@ -51,7 +52,7 @@ nav {
         @include fontSet(2em, 700);
         transition: text-shadow 0.5s;
         &:hover {
-            text-shadow: 0 0 50px rgba(whitesmoke,0.6);
+            text-shadow: 0 0 50px rgba(whitesmoke, 0.6);
         }
     }
     #nav-hbg {
@@ -87,9 +88,9 @@ nav {
     top: 38%;
     right: 6%;
     h1 {
-        @include fontSet(3em, 900) ;
-        color:whitesmoke;
-        text-shadow: 0 0 20px rgba(whitesmoke,0.95);
+        @include fontSet(3em, 900);
+        color: whitesmoke;
+        text-shadow: 0 0 20px rgba(whitesmoke, 0.95);
     }
 }
 #bubbles {
@@ -98,4 +99,36 @@ nav {
     width: 100%;
     display: flex;
     justify-content: space-around;
+
+    img {
+        // $e-func : cubic-bezier(.22,.61,.36,1) ;
+        animation: bubble 7s ease-in infinite backwards;
+        $para: 3 ;
+        @for $k from 1 through 7 {
+            &:nth-child(#{$k}) {
+                $para : ($para*3) % 7 ;
+                animation-delay: $para * 2.5s;
+            }
+        }
+        object-fit: contain;
+        &:nth-child(3n+2) {
+            width: 70px;
+        }
+        &:nth-child(5n+1) {
+            width: 30px;
+        }
+    }
+}
+@keyframes bubble {
+    0% {
+        opacity: 0;
+        transform: translateY(0);
+    }
+    5% {
+        opacity: 1;
+    }
+    100% {
+        opacity: 0;
+        transform: translateY(-80vh);
+    }
 }
