--- a/css/style.css
+++ b/css/style.css
@@ -31,7 +31,7 @@ body {
 body {
   overflow: hidden;
   position: relative;
-  background-image: url(/img/frontBG.jpg);
+  background-image: url(../img/frontBG.jpg);
   background-repeat: no-repeat;
   background-size: cover;
 }
