--- a/scss/style.scss
+++ b/scss/style.scss
@@ -34,7 +34,7 @@ body {
 body {
     overflow: hidden;
     position: relative;
-    background-image: url(/img/frontBG.jpg);
+    background-image: url(../img/frontBG.jpg);
     background-repeat: no-repeat;
     background-size: cover;
 }
