--- a/css/style.css
+++ b/css/style.css
@@ -120,6 +120,7 @@ nav #nav-link-wrap a:hover {
   position: absolute;
   bottom: 0;
   width: 100%;
+  height: 50px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -170,11 +171,11 @@ nav #nav-link-wrap a:hover {
 }
 
 #bubbles img:nth-child(3n+2) {
-  width: 70px;
+  width: 40px;
 }
 
 #bubbles img:nth-child(5n+1) {
-  width: 30px;
+  width: 20px;
 }
 
 @-webkit-keyframes bubble {
