--- a/scss/style.scss
+++ b/scss/style.scss
@@ -97,6 +97,7 @@ nav {
     position: absolute;
     bottom: 0;
     width: 100%;
+    height: 50px;
     display: flex;
     justify-content: space-around;
 
@@ -112,10 +113,10 @@ nav {
         }
         object-fit: contain;
         &:nth-child(3n+2) {
-            width: 70px;
+            width: 40px;
         }
         &:nth-child(5n+1) {
-            width: 30px;
+            width: 20px;
         }
     }
 }
