--- a/css/style.css
+++ b/css/style.css
@@ -64,13 +64,21 @@ nav #nav-logo:hover {
   text-shadow: 0 0 50px rgba(245, 245, 245, 0.6);
 }
 
-nav #nav-hbg {
-  display: block;
-}
-
 @media screen and (min-width: 1025px) {
   nav #nav-hbg {
     display: none;
+  }
+}
+
+@media screen and (max-width: 1024px) {
+  nav #nav-hbg {
+    display: block;
+    height: 32px;
+    width: 32px;
+    background: url("../icons/iconHBG.png") rgba(255, 250, 250, 0.75);
+    background-size: 32px 32px;
+    border-radius: 20%;
+    margin: 0 20px 0 auto;
   }
 }
 
@@ -170,11 +178,11 @@ nav #nav-link-wrap a:hover {
           animation-delay: 5s;
 }
 
-#bubbles img:nth-child(3n+2) {
+#bubbles img:nth-child(3n + 2) {
   width: 40px;
 }
 
-#bubbles img:nth-child(5n+1) {
+#bubbles img:nth-child(5n + 1) {
   width: 20px;
 }
 
