--- a/css/style.css
+++ b/css/style.css
@@ -42,6 +42,34 @@ body {
   }
 }
 
+#slogan {
+  position: absolute;
+  top: 38%;
+  right: 6%;
+}
+
+#slogan h1 {
+  color: whitesmoke;
+  text-shadow: 0 0 20px rgba(245, 245, 245, 0.95);
+}
+
+@media screen and (min-width: 1025px) {
+  #slogan h1 {
+    /*  Noto serif = {4, 5, 7, 9}, Roboto = {4^2, 5, 7} */
+    font-size: 3em;
+    font-weight: 900;
+  }
+}
+
+@media screen and (max-width: 1024px) {
+  #slogan h1 {
+    /*  Noto serif = {4, 5, 7, 9}, Roboto = {4^2, 5, 7} */
+    font-size: 1.8em;
+    font-weight: 900;
+    text-align: center;
+  }
+}
+
 nav {
   margin: 15px 0;
   width: 100%;
@@ -104,6 +132,7 @@ nav #nav-link-wrap a {
   }
   nav #nav-link-wrap a {
     margin-right: 2em;
+    padding: 0.5em 2em;
     background-color: transparent;
     border: 2px solid #fff;
     border-radius: 30px;
@@ -123,47 +152,25 @@ nav #nav-link-wrap a {
 
 @media screen and (max-width: 1024px) {
   nav #nav-link-wrap {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    display: none;
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
             flex-direction: column;
+    margin-top: 50px;
     width: 100%;
-    background-color: rgba(255, 255, 255, 0.25);
-  }
-  nav #nav-link-wrap a {
-    padding: 0.5em 0;
-    text-align: center;
-  }
-  nav #nav-link-wrap a:active {
     background-color: rgba(255, 255, 255, 0.45);
   }
-}
-
-#slogan {
-  position: absolute;
-  top: 38%;
-  right: 6%;
-}
-
-#slogan h1 {
-  color: whitesmoke;
-  text-shadow: 0 0 20px rgba(245, 245, 245, 0.95);
-}
-
-@media screen and (min-width: 1025px) {
-  #slogan h1 {
-    /*  Noto serif = {4, 5, 7, 9}, Roboto = {4^2, 5, 7} */
-    font-size: 3em;
-    font-weight: 900;
-  }
-}
-
-@media screen and (max-width: 1024px) {
-  #slogan h1 {
-    /*  Noto serif = {4, 5, 7, 9}, Roboto = {4^2, 5, 7} */
-    font-size: 1.8em;
-    font-weight: 900;
+  nav #nav-link-wrap a {
+    padding: 1em 0;
     text-align: center;
+    text-shadow: 0 0 4px #1e675e;
+  }
+  nav #nav-link-wrap a:active {
+    background-color: rgba(255, 255, 255, 0.85);
   }
 }
 
