--- a/css/style.css
+++ b/css/style.css
@@ -184,13 +184,13 @@ nav #nav-link-wrap a {
   display: flex;
   -ms-flex-pack: distribute;
       justify-content: space-around;
-  -webkit-filter: blur(3px);
-          filter: blur(3px);
 }
 
 #bubbles img {
   -webkit-animation: bubble 7s ease-in infinite backwards;
           animation: bubble 7s ease-in infinite backwards;
+  -webkit-filter: blur(1px);
+          filter: blur(1px);
   -o-object-fit: contain;
      object-fit: contain;
 }
@@ -232,10 +232,16 @@ nav #nav-link-wrap a {
 
 #bubbles img:nth-child(3n + 2) {
   width: 40px;
+  -webkit-filter: blur(2px);
+          filter: blur(2px);
 }
 
-#bubbles img:nth-child(5n + 1) {
+#bubbles img:nth-child(even) {
   width: 20px;
+  -webkit-transform: translateY(-10vh);
+          transform: translateY(-10vh);
+  -webkit-filter: blur(2px);
+          filter: blur(2px);
 }
 
 @-webkit-keyframes bubble {
